Enable configuration for memory thresholds

--- a/cmd/goi3bar/config.json
+++ b/cmd/goi3bar/config.json
@@ -5,7 +5,9 @@
             "name": "memory",
             "options": {
                 "name": "memory",
-                "refresh": "5s"
+                "refresh": "5s",
+                "warnThreshold": 75,
+                "critThreshold": 85
             }
         },
         {
