Made memory builder behave like clock builder

--- a/cmd/goi3bar/config.json
+++ b/cmd/goi3bar/config.json
@@ -4,8 +4,7 @@
             "package": "memory",
             "name": "memory",
             "options": {
-                "name": "memory",
-                "refresh": "5s",
+                "interval": "5s",
                 "warnThreshold": 75,
                 "critThreshold": 85
             }
