Added CPU plugin to official binary, and example

--- a/cmd/goi3bar/config.json
+++ b/cmd/goi3bar/config.json
@@ -111,6 +111,24 @@
                     }
                 ]
             }
+        },
+        {
+            "package": "cpu_load",
+            "name": "cpu_load",
+            "options": {
+                "interval": "5s",
+                "warn_threshold": 0.8,
+                "crit_threshold": 1.0
+            }
+        },
+        {
+            "package": "cpu_util",
+            "name": "cpu_util",
+            "options": {
+                "interval": "5s",
+                "warn_threshold": 0.8,
+                "crit_threshold": 1.0
+            }
         }
     ],
     "interval": "1s"
