did tarball packaging

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,5 +1,6 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
 load("@bazel_gazelle//:def.bzl", "gazelle")
+load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
+load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 # gazelle:prefix github.com/denbeigh2000/goi3bar
 gazelle(name = "gazelle")
@@ -16,4 +17,11 @@ go_library(
     importpath = "github.com/denbeigh2000/goi3bar",
     visibility = ["//visibility:public"],
     deps = ["//util"],
+)
+
+pkg_tar(
+    name = "bin_release",
+    extension = "tar.gz",
+    mode = "0755",
+    deps = [ "//cmd/goi3bar:goi3bar_pkg"],
 )
