--- a/cmd/goi3bar/BUILD.bazel
+++ b/cmd/goi3bar/BUILD.bazel
@@ -21,6 +21,7 @@ go_library(
 go_binary(
     name = "goi3bar",
     embed = [":lib"],
+    static = "on",
     visibility = ["//visibility:public"],
 )
 
